--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Concert Ticket Reservation</title>
+    <!-- Load config FIRST before anything else -->
+    <script src="/config.js"></script>
     <!-- Cloudflare Turnstile -->
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
   </head>
